@@ -4,7 +4,7 @@
 #
 # This is a script for RedHat's startup process.
 #
-# $Id: ftn,v 1.2 2004/02/11 12:44:03 sisoft Exp $
+# $Id: ftn,v 1.3 2004/03/03 15:12:58 sisoft Exp $
 # chkconfig: 345 86 14
 # description: FTN services
 #
@@ -12,7 +12,6 @@
 
 case "$1" in
   start)
-        echo $PATH
 	echo -n "Starting FTN services: "
 	su news -c 'qico -d'
 	echo qico
